--- a/notes/index.html
+++ b/notes/index.html
@@ -40,10 +40,16 @@
     <div class="hr"></div>
 
     <ul class="list">
-      <li>
+          <li>
         <a href="/notes/2026-01-fatiga-material-oro.html">
           2026 · Fatiga material en oro bajo uso prolongado
         </a>
+      </li>
+
+      <li>
+        <a href="/notes/2026-02-morfologia-natural-oro.html">
+          2026 · Morfología natural del oro: formas, procesos y lectura material
+        </a>q
       </li>
     </ul>
   </div>
