--- a/lab-notes/index.html
+++ b/lab-notes/index.html
@@ -3,30 +3,63 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Lab Notes · GOLD NODE</title>
-  <meta name="description" content="Registro de notas técnicas sobre materiales, comportamiento y lectura estructural." />
+  <meta name="description" content="Registro de notas técnicas sobre oro (Au): comportamiento material, superficie, desgaste, fatiga y criterios de lectura estructural.">
+
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
+
 <body>
 
 <header>
   <div class="container nav">
     <div class="brand">
       <span class="pill"><span class="dot"></span><span class="mono">GOLD NODE</span></span>
+      <span class="mono" style="color:#64748b;font-size:12px">non-commercial</span>
     </div>
+
+    <nav class="menu mono" aria-label="Primary">
+      <a href="/materials/">/materials</a>
+      <a href="/lab-notes/">/lab-notes</a>
+    </nav>
   </div>
 </header>
 
-<main class="section">
-  <div class="container">
+<main class="container">
+  <section class="notes-index">
     <h1>Lab Notes</h1>
-    <p class="small">Notas técnicas · Archivo inicial</p>
+
+    <p class="lede">
+      Notas técnicas orientadas a la lectura material del oro en joyería y objetos técnicos.
+      Observaciones basadas en comportamiento real, geometría, uso prolongado y mantenimiento.
+    </p>
 
     <ul class="notes-list">
-      <!-- las notas se listan acá -->
+      <li>
+        <a href="/lab-notes/2026-01-fatiga-material-oro.html">
+          <span class="note-title">Fatiga material en oro bajo uso prolongado</span>
+          <span class="note-meta mono">Enero 2026 · Fatiga · Microestructura</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="/lab-notes/2026-01-superficie-y-desgaste-del-oro.html">
+          <span class="note-title">Superficie y desgaste del oro en uso real</span>
+          <span class="note-meta mono">Enero 2026 · Superficie · Desgaste</span>
+        </a>
+      </li>
     </ul>
-  </div>
+  </section>
 </main>
+
+<footer>
+  <div class="container foot mono">
+    <a href="/lab-notes/">/lab-notes</a>
+    <span>·</span>
+    <a href="/materials/">/materials</a>
+  </div>
+</footer>
 
 </body>
 </html>
