--- a/index.html
+++ b/index.html
@@ -2,42 +2,22 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Lab Notes · GOLD NODE</title>
-  <meta name="description" content="Archivo inicial de notas técnicas sobre materiales, gemología y comportamiento estructural.">
+  <title>LW Gems · Technical Laboratory</title>
+  <meta name="description" content="Laboratorio técnico de materiales y gemología. Notas estructurales, lectura material y comportamiento del oro.">
+  <meta name="robots" content="index, follow">
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
+  <main style="max-width:720px;margin:120px auto;font-family:system-ui,-apple-system,BlinkMacSystemFont;">
+    <h1>LW Gems — Technical Laboratory</h1>
+    <p>Documentación técnica no comercial sobre materiales, gemología y comportamiento estructural.</p>
 
-<header>
-  <div class="container nav">
-    <div class="brand">
-      <span class="pill">
-        <span class="dot"></span>
-        <span class="mono">GOLD NODE</span>
-      </span>
-      <span class="mono" style="color:#64748b;font-size:12px">non-commercial</span>
-    </div>
-  </div>
-</header>
-
-<main class="container">
-  <h1>Lab Notes</h1>
-  <p class="muted">Notas técnicas · Archivo inicial</p>
-
-  <ul class="notes-list">
-    <li>
-      <a href="/lab-notes/fatiga-material-oro.html">
-        Fatiga material en oro bajo uso prolongado
+    <p>
+      <a href="/lab-notes/" style="font-weight:600;text-decoration:none;">
+        → Acceder a Lab Notes
       </a>
-    </li>
-  </ul>
-</main>
-
-<footer class="container muted">
-  <a href="/">← Volver al laboratorio</a>
-</footer>
-
+    </p>
+  </main>
 </body>
 </html>
