--- a/lab-notes/index.html
+++ b/lab-notes/index.html
@@ -3,10 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <title>Lab Notes · GOLD NODE</title>
-  <meta name="description" content="Registro de notas técnicas sobre oro (Au): comportamiento material, superficie, desgaste, fatiga y criterios de lectura estructural.">
-
+  <meta name="description" content="Archivo inicial de notas técnicas sobre materiales, gemología y comportamiento estructural.">
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -15,50 +13,30 @@
 <header>
   <div class="container nav">
     <div class="brand">
-      <span class="pill"><span class="dot"></span><span class="mono">GOLD NODE</span></span>
+      <span class="pill">
+        <span class="dot"></span>
+        <span class="mono">GOLD NODE</span>
+      </span>
       <span class="mono" style="color:#64748b;font-size:12px">non-commercial</span>
     </div>
-
-    <nav class="menu mono" aria-label="Primary">
-      <a href="/materials/">/materials</a>
-      <a href="/lab-notes/">/lab-notes</a>
-    </nav>
   </div>
 </header>
 
 <main class="container">
-  <section class="notes-index">
-    <h1>Lab Notes</h1>
+  <h1>Lab Notes</h1>
+  <p class="muted">Notas técnicas · Archivo inicial</p>
 
-    <p class="lede">
-      Notas técnicas orientadas a la lectura material del oro en joyería y objetos técnicos.
-      Observaciones basadas en comportamiento real, geometría, uso prolongado y mantenimiento.
-    </p>
-
-    <ul class="notes-list">
-      <li>
-        <a href="/lab-notes/2026-01-fatiga-material-oro.html">
-          <span class="note-title">Fatiga material en oro bajo uso prolongado</span>
-          <span class="note-meta mono">Enero 2026 · Fatiga · Microestructura</span>
-        </a>
-      </li>
-
-      <li>
-        <a href="/lab-notes/2026-01-superficie-y-desgaste-del-oro.html">
-          <span class="note-title">Superficie y desgaste del oro en uso real</span>
-          <span class="note-meta mono">Enero 2026 · Superficie · Desgaste</span>
-        </a>
-      </li>
-    </ul>
-  </section>
+  <ul class="notes-list">
+    <li>
+      <a href="/lab-notes/fatiga-material-oro.html">
+        Fatiga material en oro bajo uso prolongado
+      </a>
+    </li>
+  </ul>
 </main>
 
-<footer>
-  <div class="container foot mono">
-    <a href="/lab-notes/">/lab-notes</a>
-    <span>·</span>
-    <a href="/materials/">/materials</a>
-  </div>
+<footer class="container muted">
+  <a href="/">← Volver al laboratorio</a>
 </footer>
 
 </body>
