--- a/lab-notes/index.html
+++ b/lab-notes/index.html
@@ -29,13 +29,24 @@
   <p class="muted">Notas técnicas · Archivo inicial</p>
 
   <ul class="notes-list">
-    <li>
-      <a href="/lab-notes/fatiga-material-oro.html">Fatiga material en oro bajo uso prolongado</a>
-      <div class="muted" style="margin-top:6px">
-        Microdeformaciones repetidas, concentradores de tensión, signos tempranos y criterios de prevención.
-      </div>
-    </li>
-  </ul>
+  <li>
+    <a href="/lab-notes/2026-01-fatiga-material-oro.html">
+      Fatiga material en oro bajo uso prolongado
+    </a>
+    <div class="muted" style="margin-top:6px">
+      Microdeformaciones repetidas, concentradores de tensión, signos tempranos y criterios de prevención.
+    </div>
+  </li>
+
+  <li>
+    <a href="/lab-notes/2026-01-superficie-y-desgaste-oro.html">
+      Superficie y desgaste del oro en uso técnico
+    </a>
+    <div class="muted" style="margin-top:6px">
+      Interacción entre acabado superficial, fricción, desgaste progresivo y lectura técnica del material.
+    </div>
+  </li>
+</ul>
 
   <hr style="margin:28px 0">
 
