--- a/index.html
+++ b/index.html
@@ -5,7 +5,35 @@
   <title>LW Gems · Technical Laboratory</title>
   <meta name="description" content="Laboratorio técnico de materiales y gemología. Notas estructurales, lectura material y comportamiento del oro.">
   <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gold.lw-gems.com/">
   <link rel="stylesheet" href="/assets/css/style.css">
+  
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "GOLD NODE · LW Gems",
+  "url": "https://gold.lw-gems.com/",
+  "inLanguage": "es",
+  "publisher": {
+  "@id": "https://gold.lw-gems.com/#organization"
+}
+}
+</script>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "@id": "https://gold.lw-gems.com/#organization",
+  "name": "LW Gems",
+  "url": "https://gold.lw-gems.com/",
+  "logo": "https://lw-gems.com/logo.png",
+  "sameAs": [
+    "https://www.instagram.com/lwgems",
+    "https://www.linkedin.com/company/lw-gems"
+  ]
+}
+</script>
 </head>
 
 <body>
