--- a/lab-notes/index.html
+++ b/lab-notes/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/assets/css/style.css">
   <title>Lab Notes · GOLD NODE</title>
   <meta name="description" content="Notas técnicas sobre oro: comportamiento material, superficie, desgaste y lectura estructural.">
   <link rel="stylesheet" href="/assets/css/style.css">
