--- a/materials/index.html
+++ b/materials/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="/assets/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ciencia de materiales · LW Gems Lab</title>
   <meta name="description" content="Ciencia de materiales aplicada a gemas y metales: defectos, coherencia óptica, microestructura." />
