--- a/lab-notes/index.html
+++ b/lab-notes/index.html
@@ -13,6 +13,20 @@
 <header>
   <div class="container nav">
     <div class="brand">
+      <header class="topbar">
+  <div class="container">
+    <div class="brand">
+      <a class="brandName" href="/" aria-label="GOLD NODE Home">GOLD NODE</a>
+      <span class="brandTag">non-commercial</span>
+    </div>
+
+    <nav class="menu" aria-label="Primary">
+      <a href="/materials/">Materials</a>
+      <a href="/lab-notes/">Lab Notes</a>
+      <a href="https://lw-gems.com" target="_blank" rel="noopener">LW Gems</a>
+    </nav>
+  </div>
+</header>
       <span class="pill"><span class="dot"></span><span class="mono">GOLD NODE</span></span>
       <span class="mono" style="color:#64748b;font-size:12px">non-commercial</span>
     </div>
