--- a/materials/index.html
+++ b/materials/index.html
@@ -11,6 +11,20 @@
   <header>
     <h1>Ciencia de materiales</h1>
     <nav>
+      <header class="topbar">
+  <div class="container">
+    <div class="brand">
+      <a class="brandName" href="/" aria-label="GOLD NODE Home">GOLD NODE</a>
+      <span class="brandTag">non-commercial</span>
+    </div>
+
+    <nav class="menu" aria-label="Primary">
+      <a href="/materials/">Materials</a>
+      <a href="/lab-notes/">Lab Notes</a>
+      <a href="https://lw-gems.com" target="_blank" rel="noopener">LW Gems</a>
+    </nav>
+  </div>
+</header>
       <a href="/">Lab Home</a>
       <a href="/materials/">Ciencia de materiales</a>
       <a href="/lab-notes/">Notas técnicas</a>
