--- a/index.html
+++ b/index.html
@@ -40,7 +40,20 @@
   <main style="max-width:720px;margin:120px auto;font-family:system-ui,-apple-system,BlinkMacSystemFont;">
     <h1>LW Gems — Technical Laboratory</h1>
     <p>Documentación técnica no comercial sobre materiales, gemología y comportamiento estructural.</p>
+<header class="topbar">
+  <div class="container">
+    <div class="brand">
+      <a class="brandName" href="/" aria-label="GOLD NODE Home">GOLD NODE</a>
+      <span class="brandTag">non-commercial</span>
+    </div>
 
+    <nav class="menu" aria-label="Primary">
+      <a href="/materials/">Materials</a>
+      <a href="/lab-notes/">Lab Notes</a>
+      <a href="https://lw-gems.com" target="_blank" rel="noopener">LW Gems</a>
+    </nav>
+  </div>
+</header>
     <p>
       <a href="/lab-notes/" style="font-weight:600;text-decoration:none;">
         → Acceder a Lab Notes
