--- a/lab-notes/index.html
+++ b/lab-notes/index.html
@@ -37,25 +37,17 @@
   <h1>Lab Notes</h1>
   <p class="muted">Notas técnicas · Archivo inicial</p>
 
-  <ul class="notes-list">
-    <li>
-      <a href="./2026-01-fatiga-material-oro.html">
-        Fatiga material en oro bajo uso prolongado
-      </a>
-      <div class="muted" style="margin-top:6px">
-        Microdeformaciones repetidas, concentradores de tensión y criterios de prevención.
-      </div>
-    </li>
+  <ul class="notes">
+  <li class="noteCard">
+    <a href="/lab-notes/2026-01-fatiga-material-oro.html">Fatiga material en oro bajo uso prolongado</a>
+    <div class="noteMeta">Microdeformaciones repetidas, concentradores de tensión y criterios de prevención.</div>
+  </li>
 
-    <li>
-      <a href="./2026-01-superficie-y-desgaste-oro.html">
-        Superficie y desgaste del oro en uso técnico
-      </a>
-      <div class="muted" style="margin-top:6px">
-        Acabado superficial, fricción, desgaste progresivo y lectura material.
-      </div>
-    </li>
-  </ul>
+  <li class="noteCard">
+    <a href="/lab-notes/2026-01-superficie-y-desgaste-oro.html">Superficie y desgaste del oro en uso técnico</a>
+    <div class="noteMeta">Acabado superficial, fricción, desgaste progresivo y lectura material.</div>
+  </li>
+</ul>
 </main>
 
 <footer class="container footer">
