--- a/materials/index.html
+++ b/materials/index.html
@@ -2,53 +2,52 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="/assets/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ciencia de materiales · LW Gems Lab</title>
   <meta name="description" content="Ciencia de materiales aplicada a gemas y metales: defectos, coherencia óptica, microestructura." />
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
-<body>
-  <header>
-    <h1>Ciencia de materiales</h1>
-    <nav>
-      <header class="topbar">
-  <div class="container">
-    <div class="brand">
-      <a class="brandName" href="/" aria-label="GOLD NODE Home">GOLD NODE</a>
-      <span class="brandTag">non-commercial</span>
-    </div>
 
-    <nav class="menu" aria-label="Primary">
-      <a href="/materials/">Materials</a>
-      <a href="/lab-notes/">Lab Notes</a>
-      <a href="https://lw-gems.com" target="_blank" rel="noopener">LW Gems</a>
-    </nav>
-  </div>
-</header>
-      <a href="/">Lab Home</a>
-      <a href="/materials/">Ciencia de materiales</a>
-      <a href="/lab-notes/">Notas técnicas</a>
-      <a href="https://lw-gems.com" target="_blank" rel="noopener">Volver a LW Gems</a>
-    </nav>
+<body class="page-materials">
+  <header class="topbar topbar--plain">
+    <div class="container">
+      <div class="brand">
+        <a class="brandName" href="/" aria-label="GOLD NODE Home">GOLD NODE</a>
+        <span class="brandTag">non-commercial</span>
+      </div>
+
+      <nav class="menu" aria-label="Primary">
+        <a href="/">Lab Home</a>
+        <a aria-current="page" href="/materials/">Ciencia de materiales</a>
+        <a href="/lab-notes/">Notas técnicas</a>
+        <a href="https://lw-gems.com" target="_blank" rel="noopener">LW Gems</a>
+      </nav>
+    </div>
   </header>
 
   <main>
+    <h1>Ciencia de materiales</h1>
+    <p class="muted">Ciencia de materiales aplicada a gemas y metales: defectos, coherencia óptica, microestructura.</p>
+
     <section>
-      <h2>Áreas</h2>
-      <ul>
-        <li>Crystal growth environment</li>
-        <li>Defect density</li>
-        <li>Optical coherence</li>
-        <li>Micro-structural variance</li>
-        <li>Surface scattering</li>
-        <li>Light diffusion vs reflection</li>
-        <li>Material fatigue</li>
+      <h2 class="sectionTitle">Áreas</h2>
+
+      <ul class="gridList">
+        <li><a class="chipLink" href="#">Crystal growth environment</a></li>
+        <li><a class="chipLink" href="#">Defect density</a></li>
+        <li><a class="chipLink" href="#">Optical coherence</a></li>
+        <li><a class="chipLink" href="#">Micro-structural variance</a></li>
+        <li><a class="chipLink" href="#">Surface scattering</a></li>
+        <li><a class="chipLink" href="#">Light diffusion vs reflection</a></li>
+        <li><a class="chipLink" href="#">Material fatigue</a></li>
       </ul>
     </section>
   </main>
 
   <footer>
-    <small>LW Gems · Material Science</small>
+    <div class="container">
+      <small class="small">LW Gems · Material Science</small>
+    </div>
   </footer>
 </body>
 </html>
