--- a/index.html
+++ b/index.html
@@ -1,64 +1,73 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
-  <title>LW Gems · Technical Laboratory</title>
-  <meta name="description" content="Laboratorio técnico de materiales y gemología. Notas estructurales, lectura material y comportamiento del oro.">
-  <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://gold.lw-gems.com/">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>LW Gems — Technical Laboratory</title>
+  <meta name="description" content="Documentación técnica no comercial sobre materiales, gemología y comportamiento estructural." />
   <link rel="stylesheet" href="/assets/css/style.css">
-  
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebSite",
-  "name": "GOLD NODE · LW Gems",
-  "url": "https://gold.lw-gems.com/",
-  "inLanguage": "es",
-  "publisher": {
-  "@id": "https://gold.lw-gems.com/#organization"
-}
-}
-</script>
-  <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Organization",
-  "@id": "https://gold.lw-gems.com/#organization",
-  "name": "LW Gems",
-  "url": "https://gold.lw-gems.com/",
-  "logo": "https://lw-gems.com/logo.png",
-  "sameAs": [
-    "https://www.instagram.com/lwgems",
-    "https://www.linkedin.com/company/lw-gems"
-  ]
-}
-</script>
 </head>
 
-<body>
-  <main style="max-width:720px;margin:120px auto;font-family:system-ui,-apple-system,BlinkMacSystemFont;">
-    <h1>LW Gems — Technical Laboratory</h1>
-    <p>Documentación técnica no comercial sobre materiales, gemología y comportamiento estructural.</p>
-<header class="topbar">
-  <div class="container">
-    <div class="brand">
-      <a class="brandName" href="/" aria-label="GOLD NODE Home">GOLD NODE</a>
-      <span class="brandTag">non-commercial</span>
-    </div>
+<body class="page-home">
+  <header class="topbar topbar--plain">
+    <div class="container">
+      <div class="brand">
+        <a class="brandName" href="/" aria-label="GOLD NODE Home">GOLD NODE</a>
+        <span class="brandTag">non-commercial</span>
+      </div>
 
-    <nav class="menu" aria-label="Primary">
-      <a href="/materials/">Materials</a>
-      <a href="/lab-notes/">Lab Notes</a>
-      <a href="https://lw-gems.com" target="_blank" rel="noopener">LW Gems</a>
-    </nav>
-  </div>
-</header>
-    <p>
-      <a href="/lab-notes/" style="font-weight:600;text-decoration:none;">
-        → Acceder a Lab Notes
-      </a>
-    </p>
+      <nav class="menu" aria-label="Primary">
+        <a aria-current="page" href="/">Lab Home</a>
+        <a href="/materials/">Ciencia de materiales</a>
+        <a href="/lab-notes/">Notas técnicas</a>
+        <a href="https://lw-gems.com" target="_blank" rel="noopener">LW Gems</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero">
+      <div class="kicker">LW Gems · Technical Laboratory</div>
+      <h1>Laboratorio técnico</h1>
+      <p class="lead">
+        Documentación técnica no comercial sobre materiales, gemología y lectura estructural.
+      </p>
+
+      <div class="ctaRow">
+        <a class="primaryCta" href="/lab-notes/">Acceder a Lab Notes</a>
+        <a class="secondaryCta" href="/materials/">Explorar ciencia de materiales</a>
+      </div>
+    </section>
+
+    <section class="split">
+      <div class="panel">
+        <h2 class="sectionTitle">Secciones</h2>
+        <div class="cards">
+          <a class="card" href="/materials/">
+            <div class="cardTitle">Ciencia de materiales</div>
+            <div class="cardMeta">Defectos · coherencia óptica · microestructura</div>
+          </a>
+
+          <a class="card" href="/lab-notes/">
+            <div class="cardTitle">Lab Notes</div>
+            <div class="cardMeta">Notas técnicas (oro, superficie, fatiga, uso real)</div>
+          </a>
+        </div>
+      </div>
+
+      <div class="panel">
+        <h2 class="sectionTitle">Principio</h2>
+        <p class="muted">
+          Estilo de laboratorio: sobrio, verificable, sin marketing. Jerarquía clara, lectura limpia.
+        </p>
+      </div>
+    </section>
   </main>
+
+  <footer class="footer">
+    <div class="container">
+      <small class="small">GOLD NODE · LW Gems Lab</small>
+    </div>
+  </footer>
 </body>
 </html>
