--- a/lab-notes/index.html
+++ b/lab-notes/index.html
@@ -1,59 +1,58 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Lab Notes · GOLD NODE</title>
-  <meta name="description" content="Notas técnicas sobre oro: comportamiento material, superficie, desgaste y lectura estructural.">
+  <meta name="description" content="Notas técnicas: oro (Au), superficie, desgaste y comportamiento material." />
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
-<body>
-<header>
-  <div class="container nav">
-    <div class="brand">
-      <header class="topbar">
-  <div class="container">
-    <div class="brand">
-      <a class="brandName" href="/" aria-label="GOLD NODE Home">GOLD NODE</a>
-      <span class="brandTag">non-commercial</span>
+<body class="page-notes-index">
+  <header class="topbar topbar--plain">
+    <div class="container">
+      <div class="brand">
+        <a class="brandName" href="/" aria-label="GOLD NODE Home">GOLD NODE</a>
+        <span class="brandTag">non-commercial</span>
+      </div>
+
+      <nav class="menu" aria-label="Primary">
+        <a href="/">Lab Home</a>
+        <a href="/materials/">Ciencia de materiales</a>
+        <a aria-current="page" href="/lab-notes/">Notas técnicas</a>
+        <a href="https://lw-gems.com" target="_blank" rel="noopener">LW Gems</a>
+      </nav>
     </div>
+  </header>
 
-    <nav class="menu" aria-label="Primary">
-      <a href="/materials/">Materials</a>
-      <a href="/lab-notes/">Lab Notes</a>
-      <a href="https://lw-gems.com" target="_blank" rel="noopener">LW Gems</a>
-    </nav>
-  </div>
-</header>
-      <span class="pill"><span class="dot"></span><span class="mono">GOLD NODE</span></span>
-      <span class="mono" style="color:#64748b;font-size:12px">non-commercial</span>
+  <main>
+    <div class="kicker">Archivo · Lab Notes</div>
+    <h1>Notas técnicas</h1>
+    <p class="lead muted">Lectura material aplicada a oro (Au): superficie, desgaste, fatiga y criterios de uso.</p>
+
+    <section class="notesGrid">
+      <a class="noteCard" href="/lab-notes/2026-01-fatiga-material-oro.html">
+        <div class="noteTitle">Fatiga material en oro bajo uso prolongado</div>
+        <div class="noteDesc">Microdeformaciones repetidas, concentradores de tensión, signos tempranos y prevención.</div>
+        <div class="noteMeta">LAB NOTE · Oro (Au)</div>
+      </a>
+
+      <a class="noteCard" href="/lab-notes/2026-01-superficie-y-desgaste-oro.html">
+        <div class="noteTitle">Superficie y desgaste del oro en uso técnico</div>
+        <div class="noteDesc">Acabado superficial, fricción, desgaste progresivo y criterios de lectura material.</div>
+        <div class="noteMeta">LAB NOTE · Oro (Au)</div>
+      </a>
+    </section>
+
+    <div class="backRow">
+      <a class="backLink" href="/">← Volver al laboratorio</a>
     </div>
-  </div>
-</header>
+  </main>
 
-<main class="container">
-  <h1>Lab Notes</h1>
-  <p class="muted">Notas técnicas · Archivo inicial</p>
-
-  <ul class="notes">
-  <li class="noteCard">
-    <a href="/lab-notes/2026-01-fatiga-material-oro.html">Fatiga material en oro bajo uso prolongado</a>
-    <div class="noteMeta">Microdeformaciones repetidas, concentradores de tensión y criterios de prevención.</div>
-  </li>
-
-  <li class="noteCard">
-    <a href="/lab-notes/2026-01-superficie-y-desgaste-oro.html">Superficie y desgaste del oro en uso técnico</a>
-    <div class="noteMeta">Acabado superficial, fricción, desgaste progresivo y lectura material.</div>
-  </li>
-</ul>
-</main>
-
-<footer class="container footer">
-  <div class="muted">
-    <a href="/">← Volver al laboratorio</a>
-  </div>
-</footer>
+  <footer class="footer">
+    <div class="container">
+      <small class="small">GOLD NODE · Lab Notes</small>
+    </div>
+  </footer>
 </body>
 </html>
