--- a/lab-notes/index.html
+++ b/lab-notes/index.html
@@ -3,56 +3,71 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Lab Notes · GOLD NODE</title>
-  <meta name="description" content="Notas técnicas: oro (Au), superficie, desgaste y comportamiento material." />
+  <title>Notas técnicas · GOLD NODE</title>
+  <meta name="description" content="Notas técnicas sobre oro (Au): superficie, desgaste, fatiga y criterios de uso estructural." />
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body class="page-notes-index">
-  <header class="topbar topbar--plain">
-    <div class="container">
-      <div class="brand">
-        <a class="brandName" href="/" aria-label="GOLD NODE Home">GOLD NODE</a>
-        <span class="brandTag">non-commercial</span>
-      </div>
 
-      <nav class="menu" aria-label="Primary">
-        <a href="/">Lab Home</a>
-        <a href="/materials/">Ciencia de materiales</a>
-        <a aria-current="page" href="/lab-notes/">Notas técnicas</a>
-        <a href="https://lw-gems.com" target="_blank" rel="noopener">LW Gems</a>
-      </nav>
+<header class="topbar">
+  <div class="container">
+    <div class="brand">
+      <a class="brandName" href="/">GOLD NODE</a>
+      <span class="brandTag">non-commercial</span>
     </div>
+
+    <nav class="menu">
+      <a href="/">Lab Home</a>
+      <a href="/materials/">Ciencia de materiales</a>
+      <a aria-current="page" href="/lab-notes/">Notas técnicas</a>
+      <a href="https://lw-gems.com" target="_blank" rel="noopener">LW Gems</a>
+    </nav>
+  </div>
+</header>
+
+<main>
+  <header class="pageHeader">
+    <h1>Notas técnicas</h1>
+    <p class="muted">
+      Archivo técnico · Oro (Au) · Lectura material aplicada
+    </p>
   </header>
 
-  <main>
-    <div class="kicker">Archivo · Lab Notes</div>
-    <h1>Notas técnicas</h1>
-    <p class="lead muted">Lectura material aplicada a oro (Au): superficie, desgaste, fatiga y criterios de uso.</p>
+  <section class="notesList">
 
-    <section class="notesGrid">
-      <a class="noteCard" href="/lab-notes/2026-01-fatiga-material-oro.html">
-        <div class="noteTitle">Fatiga material en oro bajo uso prolongado</div>
-        <div class="noteDesc">Microdeformaciones repetidas, concentradores de tensión, signos tempranos y prevención.</div>
-        <div class="noteMeta">LAB NOTE · Oro (Au)</div>
-      </a>
+    <article class="noteItem">
+      <h2>
+        <a href="/lab-notes/2026-01-fatiga-material-oro.html">
+          Fatiga material en oro bajo uso prolongado
+        </a>
+      </h2>
+      <p class="noteMeta">
+        Microdeformaciones repetidas, concentradores de tensión, signos tempranos y criterios de prevención.
+      </p>
+    </article>
 
-      <a class="noteCard" href="/lab-notes/2026-01-superficie-y-desgaste-oro.html">
-        <div class="noteTitle">Superficie y desgaste del oro en uso técnico</div>
-        <div class="noteDesc">Acabado superficial, fricción, desgaste progresivo y criterios de lectura material.</div>
-        <div class="noteMeta">LAB NOTE · Oro (Au)</div>
-      </a>
-    </section>
+    <article class="noteItem">
+      <h2>
+        <a href="/lab-notes/2026-01-superficie-y-desgaste-oro.html">
+          Superficie y desgaste del oro en uso técnico
+        </a>
+      </h2>
+      <p class="noteMeta">
+        Acabado superficial, fricción, desgaste progresivo y lectura material.
+      </p>
+    </article>
 
-    <div class="backRow">
-      <a class="backLink" href="/">← Volver al laboratorio</a>
-    </div>
-  </main>
+  </section>
 
-  <footer class="footer">
-    <div class="container">
-      <small class="small">GOLD NODE · Lab Notes</small>
-    </div>
-  </footer>
+  <nav class="pageBack">
+    <a href="/">← Volver al laboratorio</a>
+  </nav>
+</main>
+
+<footer>
+  <small>GOLD NODE · Lab Notes</small>
+</footer>
+
 </body>
 </html>
