--- a/index.html
+++ b/index.html
@@ -3,71 +3,76 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>LW Gems — Technical Laboratory</title>
-  <meta name="description" content="Documentación técnica no comercial sobre materiales, gemología y comportamiento estructural." />
+  <title>LW Gems Lab · GOLD NODE</title>
+  <meta name="description" content="Laboratorio técnico no comercial: materiales, gemología y lectura estructural." />
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body class="page-home">
-  <header class="topbar topbar--plain">
-    <div class="container">
-      <div class="brand">
-        <a class="brandName" href="/" aria-label="GOLD NODE Home">GOLD NODE</a>
-        <span class="brandTag">non-commercial</span>
-      </div>
 
-      <nav class="menu" aria-label="Primary">
-        <a aria-current="page" href="/">Lab Home</a>
-        <a href="/materials/">Ciencia de materiales</a>
-        <a href="/lab-notes/">Notas técnicas</a>
-        <a href="https://lw-gems.com" target="_blank" rel="noopener">LW Gems</a>
-      </nav>
+<header class="topbar">
+  <div class="container">
+    <div class="brand">
+      <a class="brandName" href="/" aria-label="GOLD NODE Home">GOLD NODE</a>
+      <span class="brandTag">non-commercial</span>
     </div>
-  </header>
 
-  <main>
-    <section class="hero">
-      <div class="kicker">LW Gems · Technical Laboratory</div>
-      <h1>Laboratorio técnico</h1>
-      <p class="lead">
-        Documentación técnica no comercial sobre materiales, gemología y lectura estructural.
-      </p>
+    <nav class="menu" aria-label="Primary">
+      <a aria-current="page" href="/">Lab Home</a>
+      <a href="/materials/">Ciencia de materiales</a>
+      <a href="/lab-notes/">Notas técnicas</a>
+      <a href="https://lw-gems.com" target="_blank" rel="noopener">LW Gems</a>
+    </nav>
+  </div>
+</header>
 
-      <div class="ctaRow">
-        <a class="primaryCta" href="/lab-notes/">Acceder a Lab Notes</a>
-        <a class="secondaryCta" href="/materials/">Explorar ciencia de materiales</a>
+<main>
+  <section class="hero">
+    <div class="kicker">LW GEMS · TECHNICAL LABORATORY</div>
+    <h1>Laboratorio técnico</h1>
+    <p class="lead">Documentación técnica no comercial sobre materiales, gemología y lectura estructural.</p>
+
+    <div class="ctaRow">
+      <a class="primaryCta" href="/lab-notes/">Acceder a Lab Notes</a>
+      <a class="secondaryCta" href="/materials/">Explorar ciencia de materiales</a>
+    </div>
+  </section>
+
+  <section class="split" aria-label="Secciones">
+    <div>
+      <div class="kicker">Secciones</div>
+
+      <div class="cards">
+        <a class="card" href="/materials/">
+          <div class="cardTitle">Ciencia de materiales</div>
+          <div class="cardMeta">Defectos · coherencia óptica · microestructura</div>
+        </a>
+
+        <a class="card" href="/lab-notes/">
+          <div class="cardTitle">Lab Notes</div>
+          <div class="cardMeta">Oro (Au) · superficie · desgaste · fatiga · uso real</div>
+        </a>
       </div>
-    </section>
+    </div>
 
-    <section class="split">
-      <div class="panel">
-        <h2 class="sectionTitle">Secciones</h2>
-        <div class="cards">
-          <a class="card" href="/materials/">
-            <div class="cardTitle">Ciencia de materiales</div>
-            <div class="cardMeta">Defectos · coherencia óptica · microestructura</div>
-          </a>
-
-          <a class="card" href="/lab-notes/">
-            <div class="cardTitle">Lab Notes</div>
-            <div class="cardMeta">Notas técnicas (oro, superficie, fatiga, uso real)</div>
-          </a>
+    <div>
+      <div class="kicker">Estado</div>
+      <div class="cards">
+        <div class="card" style="cursor:default">
+          <div class="cardTitle">Archivo inicial</div>
+          <div class="cardMeta">Estructura estable · sin marketing · lectura limpia</div>
         </div>
       </div>
-
-      <div class="panel">
-        <h2 class="sectionTitle">Principio</h2>
-        <p class="muted">
-          Estilo de laboratorio: sobrio, verificable, sin marketing. Jerarquía clara, lectura limpia.
-        </p>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <div class="container">
-      <small class="small">GOLD NODE · LW Gems Lab</small>
     </div>
-  </footer>
+  </section>
+
+</main>
+
+<footer class="footer">
+  <div class="container">
+    <small>GOLD NODE · LW Gems Lab</small>
+  </div>
+</footer>
+
 </body>
 </html>
