--- a/lab-notes/index.html
+++ b/lab-notes/index.html
@@ -28,6 +28,7 @@
 
 <main>
   <section class="hero">
+    <div class="kicker">Archivo · Oro (Au)</div>
     <h1>Notas técnicas</h1>
     <p class="lead">Lectura material aplicada: superficie, desgaste, fatiga y criterios de uso.</p>
   </section>
