--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>LW Gems Lab · GOLD NODE</title>
-  <meta name="description" content="Laboratorio técnico no comercial: materiales, gemología y lectura estructural." />
+  <meta name="description" content="Laboratorio técnico no comercial sobre materiales, gemología y lectura estructural." />
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -27,10 +27,14 @@
 </header>
 
 <main>
+
+  <!-- HERO -->
   <section class="hero">
     <div class="kicker">LW GEMS · TECHNICAL LABORATORY</div>
     <h1>Laboratorio técnico</h1>
-    <p class="lead">Documentación técnica no comercial sobre materiales, gemología y lectura estructural.</p>
+    <p class="lead">
+      Documentación técnica no comercial sobre materiales, gemología y lectura estructural.
+    </p>
 
     <div class="ctaRow">
       <a class="primaryCta" href="/lab-notes/">Acceder a Lab Notes</a>
@@ -38,32 +42,29 @@
     </div>
   </section>
 
-  <section class="split" aria-label="Secciones">
+  <!-- SECCIONES -->
+  <section class="split" aria-label="Secciones principales">
+
     <div>
       <div class="kicker">Secciones</div>
 
       <div class="cards">
         <a class="card" href="/materials/">
           <div class="cardTitle">Ciencia de materiales</div>
-          <div class="cardMeta">Defectos · coherencia óptica · microestructura</div>
+          <div class="cardMeta">
+            Defectos · coherencia óptica · microestructura · comportamiento material
+          </div>
         </a>
 
         <a class="card" href="/lab-notes/">
           <div class="cardTitle">Lab Notes</div>
-          <div class="cardMeta">Oro (Au) · superficie · desgaste · fatiga · uso real</div>
+          <div class="cardMeta">
+            Oro (Au) · superficie · desgaste · fatiga · uso real
+          </div>
         </a>
       </div>
     </div>
 
-    <div>
-      <div class="kicker">Estado</div>
-      <div class="cards">
-        <div class="card" style="cursor:default">
-          <div class="cardTitle">Archivo inicial</div>
-          <div class="cardMeta">Estructura estable · sin marketing · lectura limpia</div>
-        </div>
-      </div>
-    </div>
   </section>
 
 </main>
