--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
 </header>
 
-<main>
+<main class="container">
 
   <!-- HERO -->
   <section class="hero">
@@ -43,28 +43,24 @@
   </section>
 
   <!-- SECCIONES -->
-  <section class="split" aria-label="Secciones principales">
+  <section aria-label="Secciones principales" style="margin-top:22px">
+    <div class="kicker">Secciones</div>
 
-    <div>
-      <div class="kicker">Secciones</div>
+    <div class="cards">
+      <a class="card" href="/materials/">
+        <div class="cardTitle">Ciencia de materiales</div>
+        <div class="cardMeta">
+          Defectos · coherencia óptica · microestructura · comportamiento material
+        </div>
+      </a>
 
-      <div class="cards">
-        <a class="card" href="/materials/">
-          <div class="cardTitle">Ciencia de materiales</div>
-          <div class="cardMeta">
-            Defectos · coherencia óptica · microestructura · comportamiento material
-          </div>
-        </a>
-
-        <a class="card" href="/lab-notes/">
-          <div class="cardTitle">Lab Notes</div>
-          <div class="cardMeta">
-            Oro (Au) · superficie · desgaste · fatiga · uso real
-          </div>
-        </a>
-      </div>
+      <a class="card" href="/lab-notes/">
+        <div class="cardTitle">Lab Notes</div>
+        <div class="cardMeta">
+          Oro (Au) · superficie · desgaste · fatiga · uso real
+        </div>
+      </a>
     </div>
-
   </section>
 
 </main>
